--- a/index.html
+++ b/index.html
@@ -33,11 +33,21 @@
 	</div>
 	<div class="row">
 		<div class="col-md-3 gallows">
-			<img src="assets/images/gallows.png" alt="hangman">
+			<div class="row">
+				<img src="assets/images/gallows.png" alt="hangman">
+			</div>
+			<div class="row">
+				<button class="btn btn-info btn-lg resetButton">Start New Game</button>
+			</div>
 		</div>
 		<div class="col-md-7">
-			<div class="row">test 2</div>
-			<div class="row">test 3</div>
+			<div class="row">
+				<h1 class="gameBoard"></h1>
+			</div>
+			<div class="row">
+				<h1>Letters Used:</h1>
+				<p class = "letterTracker"></p>
+			</div>
 		</div>
 	</div>
 	<div class="row">
