--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 	<div class="row">
 		<div class="col-md-3 gallows">
 			<div class="row">
-				<img src="assets/images/gallows.png" alt="hangman">
+				<img class = "hangman" alt="hangman">
 			</div>
 			<div class="row">
 				<button class="btn btn-info btn-lg resetButton">Start New Game</button>
@@ -44,9 +44,10 @@
 			<div class="row">
 				<h1 class="gameBoard"></h1>
 			</div>
-			<div class="row">
-				<h1>Letters Used:</h1>
-				<p class = "letterTracker"></p>
+			<div class="row usedArea">
+<!-- 				<iframe width='800' height='600' src="https://www.youtube.com/embed/fHxO0UdpoxM" frameborder="0" allowfullscreen></iframe> -->
+				<!-- <h1>Letters Used:</h1> -->
+				<!-- <p class = "letterTracker"></p> -->
 			</div>
 		</div>
 	</div>
